tests/errors/header/missing_quote_name 2.s
.comment "comment"
.name "zork

live %1
